# tictactoe

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  README.md
ai/: minmax.h
connect_four/: .cproject  .project  CMakeLists.txt
connect_four/source/: CMakeLists.txt
connect_four/source/ai/: evaluate.cpp  evaluate.h  minmax.cpp  minmax.h
connect_four/source/inc/: board.h  cell.h  color.h  connect4.h  game_p4.h  helper_ostream.h  player.h  view_ascii.h  view_cell.h
connect_four/source/src/: board.cpp  cell.cpp  connect4.cpp  game_p4.cpp  main.cpp  player.cpp  view_ascii.cpp
connect_four/source/src/model/: board.cpp  token.h
connect_four/source/src/view/: view_ascii.h
connect_four/test/: CMakeLists.txt
connect_four/test/src/: test_board.cpp  test_bug.cpp  test_cell.cpp  test_evaluate.cpp  test_game_p4.cpp  test_minmax.cpp  test_perf.cpp
nim/: .cproject  .project  CMakeLists.txt
nim/source/: CMakeLists.txt
nim/source/ai/: evaluate.h  minmax.cpp  minmax.h
nim/source/inc/: board.h  nim.h  player.h  view_ascii.h
nim/source/src/: board.cpp  main.cpp  nim.cpp  view_ascii.cpp
source/: CMakeLists.txt
source/ai/: minmax.h
source/inc/: board.h  color.h  game_p4.h  player.h  tictactoe.h
source/src/: game_p4.cpp  main.cpp  player.cpp  tictactoe.cpp
source/src/ai/: evaluate.cpp  evaluate.h  minmax.cpp  minmax.h
source/src/model/: board.cpp  board.h  cell.cpp  cell.h
source/src/view/: ansi_sequence.h  view_ascii.cpp  view_ascii.h
test/: CMakeLists.txt
test/catch/: catch.hpp
test/src/: test_board.cpp  test_bug.cpp  test_cell.cpp  test_evaluate.cpp  test_game_p4.cpp  test_minmax.cpp  test_perf.cpp  test_tictactoe.cpp
tictactoe/: .cproject  CMakeLists.txt
tictactoe/source/: CMakeLists.txt
tictactoe/source/ai/: evaluate.cpp  evaluate.h  minmax.cpp  minmax.h
tictactoe/source/inc/: board.h  player.h  tictactoe.h  token.h  view_ascii.h  view_cell.h
tictactoe/source/src/: board.cpp  main.cpp  tictactoe.cpp  view_ascii.cpp
tictactoe/test/: CMakeLists.txt
